--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "YOUR_FIREBASE_API_KEY",
-            databaseURL: "YOUR_DATABASE_URL",
+            apiKey: "AIzaSyDPF0ohJREtl2HK43_q9A7YW5q07_Dp7eM",
+            databaseURL: "https://kamble-home-power-monitor-default-rtdb.asia-southeast1.firebasedatabase.app",
         };
 
         const app = initializeApp(firebaseConfig);
