--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 const diffSeconds = Math.round((now - lastSeen) / 1000);
 
                 if (diffSeconds < 15) { // If updated in last 90 seconds
-                    statusBox.innerText = "POWER IS ON";
+                    statusBox.innerText = "GHABRU NAKO LIGHT AHE";
                     statusBox.className = "online";
                 } else {
-                    statusBox.innerText = "POWER IS OUT";
+                    statusBox.innerText = "BHoKKAATT bey geli VaPaS llight bsudchi";
                     statusBox.className = "offline";
                 }
                 timeText.innerText = "Last heartbeat: " + diffSeconds + " seconds ago";
