--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     statusBox.innerText = "GHABRU NAKO LIGHT AHE";
                     statusBox.className = "online";
                 } else {
-                    statusBox.innerText = "BHoKKAATT bey geli VaPaS llight bsudchi";
+                    statusBox.innerText = "geli VaPaS llight";
                     statusBox.className = "offline";
                 }
                 timeText.innerText = "Last heartbeat: " + diffSeconds + " seconds ago";
